Added endpoints for report info
